Add elasticsearch rest high level client dependency

--- a/file-injector/pom.xml
+++ b/file-injector/pom.xml
@@ -12,6 +12,12 @@
     <artifactId>file-injector</artifactId>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-high-level-client</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
