--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.elasticsearch.client</groupId>
+                <artifactId>elasticsearch-rest-high-level-client</artifactId>
+                <version>7.17.7</version>
+            </dependency>
 
             <!-- Production dependencies -->
             <dependency>
