--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
             - run: |
                   java -version
                   echo $JAVA_HOME
+            - run: docker compose -f "docker-compose.yml" up -d --build
             - run: ./mvnw verify
             - uses: codecov/codecov-action@v3.1.1
-
-
+            - run: docker-compose -f "docker-compose.yml" down
